--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div class="flex items-center justify-center w-full h-screen">
-
-
-<app-ng-component-outlet></app-ng-component-outlet>
-
-
-
-
+    
+    <div>
+        <h1 class="text-center text-2xl text-red-700 font-serif">Directivas</h1>
+    
+        <!--aqui van los componetes para evitar confictos con el flex-->
+        <app-ng-component-outlet></app-ng-component-outlet>
+        
+    </div>
+    
 </div>
