--- a/frontend/src/app/components/dinamic-component/dinamic-component.component.html
+++ b/frontend/src/app/components/dinamic-component/dinamic-component.component.html
@@ -1,1 +1,4 @@
-<p>dinamic-component works!</p>
+<div>
+    <h1>Componente visible</h1>
+    <img src="https://w7.pngwing.com/pngs/752/651/png-transparent-angularjs-vue-js-others-angle-rectangle-triangle.png" alt="Not Found">
+</div>
