--- a/frontend/src/app/components/dinamic-component/dinamic-component.component.html
+++ b/frontend/src/app/components/dinamic-component/dinamic-component.component.html
@@ -1,4 +1,4 @@
-<div>
-    <h1>Componente visible</h1>
-    <img src="https://w7.pngwing.com/pngs/752/651/png-transparent-angularjs-vue-js-others-angle-rectangle-triangle.png" alt="Not Found">
+<div class="bg-red-50 p-5 rounded shadow-2xl">
+    <h1 class="text-center font-medium uppercase">Componente visible</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/AngularJS_logo.svg/1280px-AngularJS_logo.svg.png" alt="Not Found">
 </div>
