--- a/frontend/src/app/components/ng-component-outlet/ng-component-outlet.component.html
+++ b/frontend/src/app/components/ng-component-outlet/ng-component-outlet.component.html
@@ -1,3 +1,15 @@
 <div>
-    <h1 class="font-semibold text-lg ">Divertiva ngComponentOutlet</h1>
+    <div class="flex w-full">
+        <div class="w-1/2">
+            <h1 class="font-semibold text-lg "> > Divertiva ngComponentOutlet</h1>
+            <h1 class="font-sans text-base ">Permite crear componetes dinàmicos</h1>
+            <button type='button' (click)='showHideComponent()' class="p-2 bg-red-600 text-gray-200">
+                {{textButton}}
+            </button>
+        </div>
+        <div class="w-1/2">
+            <ng-container *ngComponentOutlet="currentComponent"></ng-container>
+        </div>
+
+    </div>
 </div>
