--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,7 +4,8 @@
         <h1 class="text-center text-2xl text-red-700 font-serif mb-3">Directivas</h1>
     
         <!--aqui van los componetes para evitar confictos con el flex-->
-        <app-ng-component-outlet></app-ng-component-outlet>
+        <!--<app-ng-component-outlet></app-ng-component-outlet>-->
+        <app-ng-mostrador></app-ng-mostrador>
         
     </div>
     
