--- a/frontend/src/app/components/ng-component-outlet/ng-component-outlet.component.html
+++ b/frontend/src/app/components/ng-component-outlet/ng-component-outlet.component.html
@@ -1,5 +1,5 @@
-<div>
-    <div class="flex w-full">
+<div class="border-2 mb-5 border-red-500">
+    <div class="flex w-full items-center">
         <div class="w-1/4 h-64">
             <h1 class="font-semibold text-lg "> > ngComponentOutlet</h1>
             <h1 class="font-sans text-base py-2">Permite crear componentes dinàmicos</h1>
