--- a/app-web/src/app/app.component.html
+++ b/app-web/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="flex h-screen">
-  <div class="w-1/6 bg-gray-500">
+<div class="flex h-full static">
+  <div class="w-1/6 bg-gray-500 h-screen">
     <div class="flex items-center justify-center">
       <div class="w-full">
         <div class="flex items-center bg-indigo-400 w-full h-14 p-2">
