--- a/app-web/src/app/parameters/users/list-users/list-users.component.html
+++ b/app-web/src/app/parameters/users/list-users/list-users.component.html
@@ -3,7 +3,8 @@
     <h1 class="font-semibold text-center text-2xl mb-3">Listado de Usuarios</h1>
   </div>
   <div class="flex items-center justify-start">
-    <button class="m-2 p-2 bg-indigo-400 rounded text-white hover:bg-white hover:text-indigo-500 border-2 border-indigo-400">
+    <button
+      class="m-2 p-2 bg-indigo-400 rounded text-white hover:bg-white hover:text-indigo-500 border-2 border-indigo-400">
       Agregar
     </button>
   </div>
@@ -15,13 +16,16 @@
             Nombre Apellido
           </th>
           <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
-            Apodo
+            Correo Electrònico
           </th>
           <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
-            Edad
+            Direcciòn
           </th>
           <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
-            Email
+            Telèfono
+          </th>
+          <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
+            Rol
           </th>
           <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
             Acciones
@@ -31,25 +35,32 @@
       <tbody>
         <tr
           class="bg-white lg:hover:bg-gray-100 flex lg:table-row flex-row lg:flex-row flex-wrap lg:flex-no-wrap mb-10 lg:mb-0"
-          *ngFor="let user of users"
-          >
+          *ngFor="let user of users">
           <td
-            class="w-full lg:w-auto p-3 text-gray-800 text-center border border-b block lg:table-cell relative lg:static"
-            
-            >
-            {{user.name || user.lastname}}
+            class="w-full lg:w-auto p-3 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
+            {{user.usu_nombre || user.usu_apellido}}
           </td>
           <td
             class="w-full lg:w-auto p-3 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
-            {{user.nickname}}
+            {{user.usu_email}}
           </td>
           <td
             class="w-full lg:w-auto p-3 text-gray-800 border border-b text-center block lg:table-cell relative lg:static">
-            {{user.age}}
+            {{user.usu_direccion}}
           </td>
           <td
             class="w-full lg:w-auto p-3 text-gray-800 border border-b text-center block lg:table-cell relative lg:static">
-            {{user.email}}
+            {{user.usu_telefono}}
+          </td>
+          <td
+            class="w-full lg:w-auto p-3 text-gray-800 border border-b text-center block lg:table-cell relative lg:static bg-green-400"
+            *ngIf="user.rol_id == 1">
+            Administrador
+          </td>
+          <td
+            class="w-full lg:w-auto p-3 text-gray-800 border border-b text-center block lg:table-cell relative lg:static bg-blue-400"
+            *ngIf="user.rol_id == 2">
+            Empleado
           </td>
           <td
             class="w-full lg:w-auto p-3 text-gray-800 border border-b text-center block lg:table-cell relative lg:static">
