--- a/app-web/src/app/app.component.html
+++ b/app-web/src/app/app.component.html
@@ -18,19 +18,20 @@
             </p>
           </div>
           <div class="p-2  bg-gray-600 text-white border-l-4 border-indigo-400">
-            <p class="font-semibold ml-3">PROCESO</p>
+            <p class="font-semibold ml-3">PROCESOS</p>
           </div>
-          <div class="p-2 hover:bg-white hover:text-indigo-400 cursor-pointer text-gray-300">
+          <div class="p-2 border-b-2 hover:bg-white hover:text-indigo-400 cursor-pointer text-gray-300 border-gray-300">
             <p class="ml-5"><i class="far fa-file-pdf fa-lg mr-2"></i>Reportes</p>
+          </div>
+          <div class="p-2 hover:bg-white hover:text-indigo-400 cursor-pointer text-gray-300"
+            routerLink='users/list-users'>
+            <p class="ml-5"><i class="far fa-user fa-lg mr-2"></i>Usuarios</p>
           </div>
           <div class="p-2 bg-gray-600 text-white border-l-4 border-indigo-400">
             <p class="font-semibold border-gray-400 ml-3">PARAMETROS</p>
           </div>
           <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300"
-            routerLink='users/list-users'>
-            <p class="ml-5"><i class="far fa-user fa-lg mr-2"></i>Usuarios</p>
-          </div>
-          <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300">
+            routerLink='roles/list-roles'>
             <p class="ml-5"><i class="fas fa-address-book fa-lg mr-2"></i>Roles</p>
           </div>
           <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300">
