--- a/app-web/src/app/parameters/users/list-users/list-users.component.html
+++ b/app-web/src/app/parameters/users/list-users/list-users.component.html
@@ -15,22 +15,10 @@
       <thead>
         <tr>
           <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
-            Nombre Apellido
+           Dirrección Primaria
           </th>
           <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
-            Correo Electrònico
-          </th>
-          <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
-            Dirección
-          </th>
-          <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
-            Teléfono
-          </th>
-          <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
-            Rol
-          </th>
-          <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
-            Acciones
+            Dirrección Secundaria 
           </th>
         </tr>
       </thead>
