--- a/app-web/src/app/app.component.html
+++ b/app-web/src/app/app.component.html
@@ -34,7 +34,8 @@
             routerLink='roles/list-roles'>
             <p class="ml-5"><i class="fas fa-address-book fa-lg mr-2"></i>Roles</p>
           </div>
-          <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300">
+          <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300" 
+          routerLink='addresses/list-addresses'>
             <p class="ml-5"><i class="fas fa-map-pin fa-lg mr-2"></i>Direcciones</p>
           </div>
           <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300">
