--- a/app-web/src/app/parameters/users/list-users/list-users.component.html
+++ b/app-web/src/app/parameters/users/list-users/list-users.component.html
@@ -15,10 +15,22 @@
       <thead>
         <tr>
           <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
-           Dirrección Primaria
+           Nombre y Apellido
           </th>
           <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
-            Dirrección Secundaria 
+            Email
+          </th>
+          <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
+            Dirección
+          </th>
+          <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
+            Teléfono
+          </th>
+          <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
+            Roles
+          </th>
+          <th class="p-3 font-bold uppercase bg-gray-200 text-gray-600 border border-gray-300 hidden lg:table-cell">
+            Acciónes
           </th>
         </tr>
       </thead>
