--- a/app-web/src/app/app.component.html
+++ b/app-web/src/app/app.component.html
@@ -41,10 +41,12 @@
           <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300">
             <p class="ml-5"><i class="fas fa-question-circle fa-lg mr-2"></i>Preguntas</p>
           </div>
-          <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300">
-            <p class="ml-5"><i class="fas fa-city fa-lg mr-2"></i>Ciudades</p>
+          <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300"
+            routerLink='cities/list-cities'>
+            <p class="ml-5"><i  class="fas fa-city fa-lg mr-2"></i>Ciudad</p>
           </div>
         </div>
+        
       </div>
     </div>
   </div>
