--- a/app-web/src/app/app.component.html
+++ b/app-web/src/app/app.component.html
@@ -34,8 +34,8 @@
             routerLink='roles/list-roles'>
             <p class="ml-5"><i class="fas fa-address-book fa-lg mr-2"></i>Roles</p>
           </div>
-          <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300" 
-          routerLink='addresses/list-addresses'>
+          <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300"
+            routerLink='addresses/list-addresses'>
             <p class="ml-5"><i class="fas fa-map-pin fa-lg mr-2"></i>Direcciones</p>
           </div>
           <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300">
@@ -43,10 +43,18 @@
           </div>
           <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300"
             routerLink='cities/list-cities'>
-            <p class="ml-5"><i  class="fas fa-city fa-lg mr-2"></i>Ciudad</p>
+            <p class="ml-5"><i class="fas fa-city fa-lg mr-2"></i>Ciudaes</p>
           </div>
+          <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300"
+            routerLink='jobs/list-jobs'>
+            <p class="ml-5"><i class="fas fa-briefcase fa-lg mr-2"></i>Trabajos</p>
+          </div>
+          <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300"
+            routerLink='questions/list-questions'>
+            <p class="ml-5"><i class="far fa-question-circle fa-lg mr-2"></i>Preguntas</p>
+          </div>f
         </div>
-        
+
       </div>
     </div>
   </div>
