--- a/app-web/src/app/app.component.html
+++ b/app-web/src/app/app.component.html
@@ -35,10 +35,11 @@
             <p class="ml-5"><i class="fas fa-address-book fa-lg mr-2"></i>Roles</p>
           </div>
           <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300" 
-          routerLink='addresses/list-addresses'>
+            routerLink='addresses/list-addresses'>
             <p class="ml-5"><i class="fas fa-map-pin fa-lg mr-2"></i>Direcciones</p>
           </div>
-          <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300">
+          <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300"
+            routerLink='questions/list-questions'>
             <p class="ml-5"><i class="fas fa-question-circle fa-lg mr-2"></i>Preguntas</p>
           </div>
           <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300"
