--- a/app-web/src/app/app.component.html
+++ b/app-web/src/app/app.component.html
@@ -52,7 +52,7 @@
           </div>
           <div class="border-b-2 p-2 hover:bg-white hover:text-indigo-400 cursor-pointer border-gray-300 text-gray-300"
             routerLink='questions/list-questions'>
-            <p class="ml-5"><i class="far fa-question-circle fa-lg mr-2"></i>Preguntas</p>
+            <p class="ml-5"><i class="far fa-question-circle fa-lg mr-2"></i>Answer</p>
           </div>
         </div>
 
