--- a/app-web/src/app/app.component.html
+++ b/app-web/src/app/app.component.html
@@ -20,7 +20,8 @@
           <div class="p-2  bg-gray-600 text-white border-l-4 border-indigo-400">
             <p class="font-semibold ml-3">PROCESOS</p>
           </div>
-          <div class="p-2 border-b-2 hover:bg-white hover:text-indigo-400 cursor-pointer text-gray-300 border-gray-300">
+          <div class="p-2 border-b-2 hover:bg-white hover:text-indigo-400 cursor-pointer text-gray-300 border-gray-300"
+            routerLink='answers/list-answers'>
             <p class="ml-5"><i class="far fa-file-pdf fa-lg mr-2"></i>Reportes</p>
           </div>
           <div class="p-2 hover:bg-white hover:text-indigo-400 cursor-pointer text-gray-300"
