--- a/app-web/src/app/process/answers/create-answers/create-answers.component.html
+++ b/app-web/src/app/process/answers/create-answers/create-answers.component.html
@@ -1,27 +1,27 @@
 <div class="overflow-auto h-screen w-full p-5">
     <div class="border-2 p-5 rounded-lg border-black">
-        <h1 class="text-center uppercase text-2xl font-serif">Reporte de Campo</h1>
+        <h1 class="text-center uppercase text-2xl font-serif">{{tituloForm}}de Campo</h1>
         <div class="flex items-center justify-center h-5">
             <span class="text-red-500 text-sm" *ngIf="submitted && createAnswer.invalid">
                 Todos los campos son obligatorios
             </span>
         </div>
-        <div class="flex items-center justify-end">
-            <div>
-                <button
-                    class="bg-indigo-400 text-gray-200 p-2 m-2 rounded hover:shadow-2xl hover:text-indigo-400 hover:bg-white border-2 border-indigo-400 font-semibold"
-                    routerLink='/answers/list-answers'>
-                    <i class="far fa-arrow-alt-circle-left fa-lg"></i> Volver
-                </button>
-            </div>
-            <div>
-                <button
-                    class="bg-green-400 p-2 m-2 rounded hover:shadow-2xl border-2 border-green-400 hover:text-green-600 hover:bg-white text-white font-semibold">
-                    Guardar <i class="far fa-save fa-lg"></i>
-                </button>
-            </div>
-        </div>
         <form [formGroup]='createAnswer' (ngSubmit)='insertUpdateAnswer()' class="p-5">
+            <div class="flex items-center justify-end">
+                <div>
+                    <button
+                        class="bg-indigo-400 text-gray-200 p-2 m-2 rounded hover:shadow-2xl hover:text-indigo-400 hover:bg-white border-2 border-indigo-400 font-semibold"
+                        routerLink='/answers/list-answers'>
+                        <i class="far fa-arrow-alt-circle-left fa-lg"></i> Volver
+                    </button>
+                </div>
+                <div>
+                    <button type='submit'
+                        class="bg-green-400 p-2 m-2 rounded hover:shadow-2xl border-2 border-green-400 hover:text-green-600 hover:bg-white text-white font-semibold">
+                        Guardar <i class="far fa-save fa-lg"></i>
+                    </button>
+                </div>
+            </div>
             <div class="flex w-full p-5">
                 <div class=" w-1/2 border-2 mr-2 p-5 hover:shadow-2xl border-black">
                     <h1>DATOS</h1>
@@ -29,8 +29,9 @@
                         Nombre
                         <select class="w-full shadow-lg" formControlName='usuario_id'>
                             <option value="">Selecionar...</option>
-                            <option value={{user.id}} *ngFor="let user of users">{{user.usu_nombre + ' ' +
-                                user.usu_apellido}}</option>
+                            <option value={{user.id}} *ngFor="let user of users">
+                                {{user.usu_nombre + ' ' + user.usu_apellido}}
+                            </option>
                         </select>
                     </div>
                     <div class="m-1 text-sm">
@@ -39,10 +40,11 @@
                     </div>
                     <div class="m-1 text-sm">
                         Trabajo
-                        <select class="w-full shadow-lg" formControlName='usuario_id'>
+                        <select class="w-full shadow-lg" formControlName='trabajos_id'>
                             <option value="">Selecionar...</option>
-                            <option value={{user.id}} *ngFor="let user of users">{{user.usu_nombre + ' ' +
-                                user.usu_apellido}}</option>
+                            <option value={{job.id}} *ngFor="let job of jobs">
+                                {{job.tra_descripcion}}
+                            </option>
                         </select>
                     </div>
 
@@ -51,18 +53,20 @@
                     <h1>UBICACION</h1>
                     <div class="m-1 text-sm">
                         Ciudad
-                        <select class="w-full shadow-lg" formControlName='usuario_id'>
+                        <select class="w-full shadow-lg" formControlName='ciudades_id'>
                             <option value="">Selecionar...</option>
-                            <option value={{user.id}} *ngFor="let user of users">{{user.usu_nombre + ' ' +
-                                user.usu_apellido}}</option>
+                            <option value={{city.id}} *ngFor="let city of cities">
+                                {{city.ciu_descripcion}}
+                            </option>
                         </select>
                     </div>
                     <div class="m-1 text-sm">
                         Dirección
-                        <select class="w-full shadow-lg" formControlName='usuario_id'>
+                        <select class="w-full shadow-lg" formControlName='direccion_id'>
                             <option value="">Selecionar...</option>
-                            <option value={{user.id}} *ngFor="let user of users">{{user.usu_nombre + ' ' +
-                                user.usu_apellido}}</option>
+                            <option value={{adress.id}} *ngFor="let adress of addresses">
+                                {{adress.direc_calle_principal + ' ' + adress.direc_calle_secundaria}}
+                            </option>
                         </select>
                     </div>
                 </div>
@@ -91,7 +95,7 @@
                             </td>
                             <td class="w-1/3 px-4 py-3">
                                 <input type="text" class="w-full shadow-lg" placeholder="Observación"
-                                    ormControlName='res_observacion' />
+                                    formControlName='res_observacion' />
                             </td>
                         </tr>
                     </table>
