--- a/app-web/src/app/process/answers/create-answers/create-answers.component.html
+++ b/app-web/src/app/process/answers/create-answers/create-answers.component.html
@@ -1,13 +1,19 @@
 <div class="overflow-auto h-screen w-full p-5">
-    <div class="border-2 p-5 rounded-lg border-black">
+    <div class="border-2 p-5 rounded-lg border-black" id="report">
         <h1 class="text-center uppercase text-2xl font-serif">{{tituloForm}}de Campo</h1>
         <div class="flex items-center justify-center h-5">
             <span class="text-red-500 text-sm" *ngIf="submitted && createAnswer.invalid">
                 Todos los campos son obligatorios
             </span>
         </div>
+        <div>
+            <button (click)="openPDF()"
+                class="bg-red-300 p-2 m-2 rounded hover:shadow-2xl border-2 border-red-300 hover:border-red-600 hover:text-red-600 hover:bg-white text-white font-semibold">
+                GENERAR REPORTE <i class="fas fa-file-pdf fa-lg"></i>
+            </button>
+        </div>
         <form [formGroup]='createAnswer' (ngSubmit)='insertUpdateAnswer()' class="p-5">
-            <div class="flex items-center justify-end">
+            <div class="flex items-center justify-end" *ngIf="!submitted">
                 <div>
                     <button
                         class="bg-indigo-400 text-gray-200 p-2 m-2 rounded hover:shadow-2xl hover:text-indigo-400 hover:bg-white border-2 border-indigo-400 font-semibold"
@@ -16,7 +22,7 @@
                     </button>
                 </div>
                 <div>
-                    <button type='submit'
+                    <button 
                         class="bg-green-400 p-2 m-2 rounded hover:shadow-2xl border-2 border-green-400 hover:text-green-600 hover:bg-white text-white font-semibold">
                         Guardar <i class="far fa-save fa-lg"></i>
                     </button>
@@ -74,7 +80,7 @@
             <div class="flex w-full p-5">
                 <div class="border-2 w-full p-5 hover:shadow-2xl border-black">
                     <h1 class="py-5 uppercase">Recolección de datos</h1>
-                    <table class="min-w-full mx-auto bg-gray-200 text-gray-800">
+                    <table class="min-w-full mx-auto bg-gray-200 text-gray-800" id="table">
                         <tr class="text-left border-b-2 border-gray-300">
                             <th class="px-4 py-3 w-1/3">Pregunta</th>
                             <th class="px-4 py-3 w-1/3">Respuesta</th>
