--- a/app-web/src/app/app.component.html
+++ b/app-web/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="flex h-full static">
-    <div class="w-1/6 bg-gray-500 h-screen" *ngIf="user.id !== 0">
+    <div class="w-1/6 bg-gray-500 h-screen" *ngIf="user">
         <div class="flex items-center justify-center">
             <div class="w-full">
                 <div class="flex items-center bg-indigo-400 w-full h-14 p-2">
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-    <div class="w-5/6" *ngIf="user.id !== 0">
+    <div class="w-5/6" *ngIf="user">
         <div class="flex bg-gray-500 h-14  items-center justify-end text-indigo-500">
             <div class="flex items-center">
                 <ul class="flex flex-wrap w-full items-center">
@@ -69,7 +69,7 @@
             <router-outlet></router-outlet>
         </div>
     </div>
-    <div class="w-full" *ngIf="user.id == 0">
+    <div class="w-full" *ngIf="!user">
         <div class="flex bg-gray-500 h-14 items-center justify-end text-indigo-500">
             <div class="flex items-center">
                 <ul class="flex flex-wrap w-full items-center">
@@ -83,7 +83,12 @@
             </div>
         </div>
         <div class="p-5">
-            <router-outlet></router-outlet>
+            <div *ngIf="location == '/home'">
+                <app-home></app-home>
+            </div>
+            <div *ngIf="location == '/login'">
+                <app-login></app-login>
+            </div>
         </div>
     </div>
 </div>
