--- a/app-web/src/app/app.component.html
+++ b/app-web/src/app/app.component.html
@@ -11,7 +11,7 @@
                     </div>
                 </div>
                 <div>
-                    <div class="p-2 cursor-pointer" routerLink='/home'>
+                    <div class="p-2 cursor-pointer" routerLink='/system/home'>
                         <p class="font-semibold border-gray-400 ml-5 text-indigo-400">
                             <i class="fas fa-home fa-lg mr-2"></i> INICIO
                         </p>
