--- a/app-web/src/app/components/home-principal/home-principal.component.html
+++ b/app-web/src/app/components/home-principal/home-principal.component.html
@@ -1,1 +1,107 @@
-<p>home-principal works!</p>
+<div class="">
+    <div class="relative bg-gray-500 overflow-hidden ">
+        <div class="max-w-screen-xl ">
+            <div class=" z-10 pb-8 bg-gray-300 sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+                <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2"
+                    fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none">
+                    <polygon points="50,0 100,0 50,100 0,100" />
+                </svg>
+
+                <div class="relative pt-6 px-4 sm:px-6 lg:px-8">
+                    <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start">
+                        <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
+                            <div class="flex items-center justify-between w-full md:w-auto">
+                                <div class="-mr-2 flex items-center md:hidden">
+                                    <button type="button"
+                                        class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out"
+                                        id="main-menu" aria-label="Main menu" aria-haspopup="true">
+                                        <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M4 6h16M4 12h16M4 18h16" />
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </nav>
+                </div>
+
+                <div class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
+                    <div class="rounded-lg shadow-md">
+                        <div class="rounded-lg bg-white shadow-xs overflow-hidden">
+                            <div class="px-5 pt-4 flex items-center justify-between">
+                                <div class="-mr-2">
+                                    <button type="button"
+                                        class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out"
+                                        aria-label="Close menu">
+                                        <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M6 18L18 6M6 6l12 12" />
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <main class="mt-10 mx-auto max-w-screen-xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
+                    <div class="sm:text-center lg:text-left">
+                        <h2
+                            class="text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-6xl">
+                            Disfruta de una
+                            <br class="xl:hidden">
+                            <span class="text-indigo-600"> mejor organización </span>
+                        </h2>
+                        <p
+                            class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
+                            Works flash es una plataforma que ayuda aun negocio a tener una mejor organización
+                        </p>
+                        <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
+                            <div class="rounded-md shadow">
+                            </div>
+                        </div>
+                    </div>
+                </main>
+            </div>
+        </div>
+        <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
+            <main class="grid h-screen place-items-center relative bg-gradient-to-r from-yellow-400 to-yellow-500">
+                <div class="absolute h-4/5 w-9/12 transform bg-gray-100 rounded-full overflow-hidden shadow-xl">
+                    <div class="absolute h-screen w-96 transform rotate-12 bg-yellow-500 bottom-0 -left-40"></div>
+                    <div class="absolute h-screen w-96 transform rotate-12 bg-yellow-400 top-0 -right-40"></div>
+                </div>
+                <div class="relative h-96 w-96">
+                    <div
+                        class="card bg-cyan-400 shadow-md inline-block w-96 h-96 rounded-3xl absolute bottom-0 transform -rotate-12">
+                    </div>
+                    <div
+                        class="card bg-indigo-400 shadow-lg inline-block w-96 h-96 rounded-3xl absolute bottom-0 transform -rotate-6">
+                    </div>
+                    <div
+                        class="card bg-pink-500 shadow-lg inline-block w-96 h-96 rounded-3xl absolute bottom-0 transform rotate-6">
+                    </div>
+                    <div
+                        class="card bg-white transition shadow-xl w-96 h-96 rounded-3xl absolute bottom-0 z-10 grid place-items-center">
+                        <div class="card bg-white shadow-inner h-4/5 w-3/4 rounded-2xl overflow-hidden relative">
+                            <h1 class="shadow-md text-xl font-thin text-center text-gray-600 uppercase p-3">Organización
+                            </h1>
+                            <img src="https://www.estrategiaynegocios.net/csp/mediapool/sites/dt.common.streams.StreamServer.cls?STREAMOID=m0jCyP0HVZ1Pxs5fAqWxBc$daE2N3K4ZzOUsqbU5sYs2aL4ugYhjKX2jVMhSSk$46FB40xiOfUoExWL3M40tfzssyZqpeG_J0TFo7ZhRaDiHC9oxmioMlYVJD0A$3RbIiibgT65kY_CSDiCiUzvHvODrHApbd6ry6YGl5GGOZrs-&CONTENTTYPE=image/jpeg"
+                                alt="" />
+                            <button
+                                class="card bg-gray-700 hover:bg-gray-600 transition text-white w-full h-1/6 absolute bottom-0 "></button>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
+
+
+    </div>
+
+    <div className="flex items-center justify-center text-center p-2 h-40 bg-white dark:bg-gray-800 font-serif">
+        <p className="text-yellow-400 md:px-5 text-5xl "></p>
+        <p className="text-3xl"> <span className="font-bold text-yellow-400">.</span></p>
+    </div>
+</div>
